# catalyst

./: .gitignore  README.md
.github/workflows/: deploy-pages.yml
catalyst-ui/: README.md  index.html
catalyst-ui-scope/: index.html
catalyst-ui-scope/assets/: app.js  styles.css
catalyst-ui/assets/: app.js  styles.css
docs/assets/: app.js
examples/1908.10084/: STATUS.json  candidates.json  metadata.json  plan.json  requirements.json  run_eval.py  scaling_rationale.md  summary.md
examples/2106.09685/: STATUS.json  candidates.json  metadata.json  plan.json  requirements.json  scaling_rationale.md  summary.md
policy/: command_policy.yaml
prompts/: debug_loop.md  extract_requirements.md  plan_reproduction.md  requirements.schema.json  write_report.md
reader/: build_reader.py  extract_lora_data_legacy.py  extract_paper_data.py  index_builder.py  lora_data.json  lora_reader.html  run_pipeline.py  serve_catalog.py  topics.json
reader/data/: 1706.03762.json  1908.10084.json  2005.14165.json  2106.09685.json  2604.17217.json  2604.19321.json  2604.21592.json
reader/prompts/: classify_paper.md  extract_data.md  infer_values.md
reader/readers/: 1706.03762.html  1908.10084.html  2005.14165.html  2106.09685.html  2604.17217.html  2604.19321.html  2604.21592.html  catalog.html
sops/paper_reader_scheduled/: SOP.md  SOP.toml
sops/paper_repro/: SOP.md  (+1 more)
tests/: e2e_known_good.sh
tools/arxiv_fetch/: pyproject.toml  server.py  test_cli.py
tools/pdf_extract/: pyproject.toml  server.py  test_cli.py
tools/repo_scout/: pyproject.toml  server.py  test_cli.py
(+11 files in other folders)
